<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.example.gestordetareas.vista.AjustesActivity">

    <!-- Toolbar correctamente colocada -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:titleTextColor="@color/white"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        android:title="@string/ajustes_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Contenedor para los botones -->
    <LinearLayout
        android:id="@+id/contenedor_botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Botón para cambiar de tema -->
        <Button
            android:id="@+id/btn_cambiar_tema"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajustes_cambiar_tema"
            android:layout_marginBottom="16dp"/>

        <!-- Botón para eliminar todas las tareas -->
        <Button
            android:id="@+id/btn_eliminar_tareas"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajustes_eliminar_tareas"
            android:backgroundTint="@color/error"
            android:layout_marginBottom="16dp"/>

        <!-- Botón para cerrar sesión -->
        <Button
            android:id="@+id/btn_cerrar_sesion_ajustes"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ajustes_cerrar_sesion"
            android:backgroundTint="@color/error"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
