<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Barra de herramientas -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/detalles_tarea"
        app:titleTextColor="@android:color/white"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Label Título -->
    <TextView
        android:id="@+id/label_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_tarea"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Título -->
    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/label_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Label Descripción -->
    <TextView
        android:id="@+id/label_descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_descripcion"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Descripción -->
    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="italic"
        android:gravity="start"
        android:textColor="@android:color/darker_gray"
        android:breakStrategy="simple"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/label_descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Label Fecha -->
    <TextView
        android:id="@+id/label_fecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_fecha"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Fecha -->
    <TextView
        android:id="@+id/tv_fecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/label_fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Label Imagen -->
    <TextView
        android:id="@+id/label_imagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_imagen"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_fecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Imagen -->
    <ImageView
        android:id="@+id/iv_imagen"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/descripcion_imagen"
        app:layout_constraintTop_toBottomOf="@id/label_imagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Botón Volver -->
        <Button
            android:id="@+id/btn_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_atras"
            android:backgroundTint="@color/primary"
            android:textColor="@android:color/white"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/iv_imagen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
